Fixed changelist filter taking up too much space with long strings

--- a/django/contrib/admin/static/admin/css/changelists.css
+++ b/django/contrib/admin/static/admin/css/changelists.css
@@ -137,6 +137,7 @@
     background: var(--darkened-bg);
     border-left: none;
     margin: 0 0 0 30px;
+    word-break: break-word;
 }
 
 #changelist-filter h2 {
